@@ -1,3 +1,8 @@
+2008-10-20  Dan Williams  <dcbw@redhat.com>
+
+	* gconf-helpers/nma-gconf-connection.c
+		- (service_get_secrets): fix for exported connection class clarifications
+
 2008-10-18  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* src/connection-editor/ce-page-ip4.glade: Don't translate
